logs/mobility/build.make.124.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In member function ‘void DropOffController::setTagCountToZeroIfAppropriate()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:27:1: error: ‘timeDifferenceObject’ was not declared in this scope
 timeDifferenceObject = ros::Time::now() - lastTimeISawTheCenterBase;
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
